--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<iframe src="https://google.com" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="960px" allowfullscreen=""></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            background-color: #f1f1f1;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 10px;
+            width: calc(100% - 00px); /* Set the width to 100% minus twice the padding */
+            box-sizing: border-box; /* Include padding in the width calculation */
+        }
+    </style>
+</head>
+<body>
+
+<ul id="elementList"></ul>
+
+<script>
+    function updateList() {
+        const listContainer = document.getElementById("elementList");
+        
+        // Get the query parameters as an array
+        const queryParams = new URLSearchParams(window.location.search);
+        const elements = queryParams.get('elements');
+
+        // Clear existing list items
+        listContainer.innerHTML = '';
+
+        // Create new list items based on the query parameters
+        if (elements) {
+            elements.split(',').map(element => {
+                const listItem = document.createElement("li");
+                listItem.textContent = element.trim();
+                listContainer.appendChild(listItem);
+            });
+        }
+    }
+
+    // Initialize the list based on the initial query parameters
+    updateList();
+</script>
+
+</body>
+</html>
